# pytest-sqlalchemy

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  HISTORY.rst  LICENSE  README.md  README.rst  pyproject.toml  pytest_sqlalchemy.py  setup.py
.github/workflows/: ci.yml  release.yml
docs/: conf.py
src/pytest_sqlalchemy/: __init__.py
tests/: conftest.py  test_plugin.py  test_sqlite.py
tests/examples/: test_connect_uri.py  test_db_schema.py  test_dbsession.py  test_minimal.py  test_transaction.py  test_xdist.py
