[project]
name = "pytest-sqlalchemy"
version = "0.2.0"
description = "pytest plugin with sqlalchemy related fixtures"
authors = [
    { name = "Torsten Irländer", email = "torsten.irlaender@googlemail.com" }
]
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    "coverage>=7.8.0",
    "pytest>=8.0",
    "sqlalchemy>=1.4",
    "SQLAlchemy-Utils>=0.41",
]

[project.urls]
Homepage = "http://github.com/toirl/pytest-sqlalchemy/"

[project.entry-points.pytest11]
sqlalchemy = "pytest_sqlalchemy"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest-xdist>=3.6.1",
]
docs = [
    "furo>=2024.8.6",
    # work around https://github.com/astral-sh/uv/issues/12737
    "sphinx>=7.4.7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["pytest_sqlalchemy", "tests"]
parallel = true

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "sqlalchemy_utils.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = ["tests/examples"]
